Window Managers/XMonad/xmonad.errors

xmonad.hs:129:3: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected type: IO [Char]
        Actual type: [[Char]]
    • In a stmt of a 'do' block: splitOn "+" finance
      In the expression:
        do finance <- readProcess
                        "rg"
                        ["http",
                         "/home/arya/Documents/Org/Brain/Learning/Business/StockMarket.org"]
                        ""
           splitOn "+" finance
      In an equation for ‘financeWebsites’:
          financeWebsites
            = do finance <- readProcess "rg" ["http", ....] ""
                 splitOn "+" finance
    |
129 |   Data.List.Split.splitOn "+" finance
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:342:42: error:
    • Couldn't match expected type ‘[String]’
                  with actual type ‘IO [Char]’
    • In the first argument of ‘mkComplFunFromList'’, namely
        ‘financeWebsites’
      In the third argument of ‘inputPromptWithCompl’, namely
        ‘(mkComplFunFromList' financeWebsites)’
      In the first argument of ‘(?+)’, namely
        ‘inputPromptWithCompl
           runXPConfig "Finance" (mkComplFunFromList' financeWebsites)’
    |
342 |                     (mkComplFunFromList' financeWebsites ) ?+ browse)
    |                                          ^^^^^^^^^^^^^^^
